--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/Base.Theme.IUP"
         tools:targetApi="31">
         <activity android:name=".WorkoutDetailActivity" />
+        <activity android:name=".RestDayActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
